--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,11 @@ dev = [
     "pytest-cov>=6.2.1",
     "pytest-mock>=3.14.1",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = [
+    "-v",
+    "--cov=src",
+    "--cov-report=term",
+]
